--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -151,6 +151,7 @@
             android:text="ADD CUSTUMER"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:layout_marginTop="40dp"
             android:padding="5dp"
             android:layout_marginHorizontal="20dp"
             android:backgroundTint="@color/gray_background"/>
@@ -159,6 +160,7 @@
             android:id="@+id/btSearchCustomer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:text="SEARCH CUSTUMER"
             android:textColor="@color/black"
             android:textSize="16sp"
